# notes

./: .dockerignore  Dockerfile  README.md  TODO.md  database.py  main.py  makefile  package.json  pyproject.toml
.github/workflows/: build.yml  docker-build.yml  release.yml  test.yml
backend/: database.py  models.py
backend/handlers/: notes.py  static.py
backend/migrations/: 002_add_status_field.sql
backend/tests/: test_notes_e2e.py
frontend/: TODO.md  eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  keybindings.json  keybindings.ts  main.tsx  markdown.css  settings.json  texts.json  texts.ts  types.ts
frontend/src/components/: Button.tsx  Header.tsx  Input.tsx  NoteEditor.tsx  NotesList.tsx  NotesSidebar.tsx  NotesSidebarHeader.tsx  Text.tsx  TextField.tsx
frontend/src/components/core/: Button.tsx  TextField.tsx
migrations/: 001_initial_schema.sql
src/: App.tsx
src/components/: Header.tsx  NoteEditor.tsx
